chore: changeover to GitHub

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "simple-actors"
 version = "0.4.1"
 description = "Simple actor system based on Tokio"
 authors = ["Blake Rain <blake.rain@blakerain.com>"]
+repository = "https://github.com/BlakeRain/simple-actors"
 edition = "2021"
 rust-version = "1.75"
 
